--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,9 @@
-{
-    "build": {
-        "builder": "DOCKERFILE",
-        "dockerfilePath": "./Dockerfile",
-        "watchPatterns": [
-            "requirements.txt",
-            "src/**",
-            "railway.toml",
-            "Dockerfile"
-        ]
-    }
-}
+[build]
+builder = "DOCKERFILE"
+dockerfilePath = "./Dockerfile"
+watchPatterns = [
+  "requirements.txt",
+  "src/**",
+  "railway.toml",
+  "Dockerfile"
+]
